--- a/exercises/README.mdx
+++ b/exercises/README.mdx
@@ -1,1 +1,33 @@
 # React and the Vanishing Network 🧙
+
+👨‍💼 Welcome to our workshop on React and the Vanishing Network! I'm Peter the
+Product Manager, and I'll be guiding you through the fascinating evolution of
+web application architecture and network management in React applications.
+
+In this workshop, you'll explore the historical progression of how we've handled
+network interactions in web apps, ultimately leading to modern solutions that
+simplify network management. We'll journey through:
+
+1. Multi-Page Applications (MPA)
+2. Single-Page Applications (SPA)
+3. Progressive Enhancement SPA (PESPA)
+4. React Server Components (RSC)
+
+As we progress through each architecture, you'll:
+
+- Understand the challenges each approach aimed to solve
+- Implement network management techniques specific to each era
+- Observe how the code for managing network interactions has evolved
+- Discover how React Server Components eliminate the need for custom network
+  management code
+
+By the end of this workshop, you'll have a comprehensive understanding of:
+
+- The historical context of web application architectures
+- How network management strategies have changed over time
+- The benefits and trade-offs of each approach
+- Why React Server Components represent a significant leap forward in
+  simplifying network handling
+
+Let's embark on this journey through time and see how React has helped us
+make network problems vanish! 🪄🕰️
