organize things a bit more

--- a/exercises/FINISHED.mdx
+++ b/exercises/FINISHED.mdx
@@ -1,3 +1,19 @@
 # React and the Vanishing Network 🧙
 
-Hooray! You're all done! 👏👏
+Congratulations! 🎉 You've completed the workshop!
+
+You've built the same app using:
+
+1. Multi-Page Applications (MPA)
+2. Single-Page Applications (SPA)
+3. Progressive Enhancement SPA (PESPA)
+4. React Server Components (RSC)
+
+Key Takeaways:
+
+- Experienced the evolution of network management on the web
+- Discovered how RSCs simplify code and improve performance
+
+React Server Components are a game-changer for network management.
+
+Keep building amazing things with React! 🧙‍♂️💻
