--- a/exercises/01.early-web/01.problem.mpa/README.mdx
+++ b/exercises/01.early-web/01.problem.mpa/README.mdx
@@ -1,1 +1,12 @@
 # MPA
+
+👨‍💼 Our users want to count things. In this exercise, we already have the
+scaffolding for a simple hono.js application. Your job is to implement the
+following:
+
+1. Render the current count on the page
+2. Implement the form to update the count
+3. Implement the logic to update the count
+4. Redirect to the home page
+
+Good luck!
