--- a/exercises/01.early-web/01.solution.mpa/README.mdx
+++ b/exercises/01.early-web/01.solution.mpa/README.mdx
@@ -1,1 +1,9 @@
 # MPA
+
+👨‍💼 Great job! Our users can now count things 👏
+
+Take note of the network related code we need to implement ourselves. As this is
+an MPA, much of the networking is managed by the browser, however we do have a
+level of indirection between the form action URL and the server handler URL.
+
+Let's keep going because our users want an even better experience.
