--- a/exercises/01.early-web/02.problem.pempa/README.mdx
+++ b/exercises/01.early-web/02.problem.pempa/README.mdx
@@ -1,1 +1,21 @@
 # PEMPA
+
+👨‍💼 Our users aren't all that happy about the full page reloads. They want a
+better experience, so let's add some client-side JavaScript to make the
+experience a bit smoother.
+
+Additionally, users want to have some pending UI that's better than the
+browser's default "favicon" spinner. So you'll need to manage that as well.
+
+You'll need to:
+
+1. Add a script tag to the page to load the JavaScript
+2. Add the JavaScript to handle the form submission, count update and pending UI
+3. Update the server to handle the JavaScript submitted form
+
+Don't worry about the error for now. Just log it to the console.
+
+Also, keep in mind that this is a progressive enhancement so we need to make
+sure that the server still works even if the JavaScript isn't loaded.
+
+You got this!
