--- a/exercises/01.early-web/FINISHED.mdx
+++ b/exercises/01.early-web/FINISHED.mdx
@@ -1,1 +1,20 @@
 # Early Web
+
+The early web era was characterized by Multi-Page Applications (MPAs), where
+each user interaction typically resulted in a full page reload. This approach
+laid the foundation for web development and network management as we know it
+today. In MPAs, the server was responsible for rendering the entire HTML for
+each page, and navigation between pages required fetching a completely new
+document from the server.
+
+Key aspects of early web development included server-side rendering of HTML,
+full page reloads for navigation, and form submissions that resulted in server
+responses. The POST-Redirect-GET pattern emerged as a common solution to handle
+form submissions and prevent duplicate submissions. While this approach had
+limitations in terms of user experience and performance, it provided a
+straightforward and robust method for building web applications.
+
+Understanding these early web concepts is crucial for appreciating the
+evolution of web development and the advancements that have led to modern
+techniques like Single-Page Applications (SPAs) and React Server Components
+(RSCs).
