--- a/exercises/02.early-react/01.problem.spa/README.mdx
+++ b/exercises/02.early-react/01.problem.spa/README.mdx
@@ -1,1 +1,25 @@
-# SPA
+# SPA (Single Page Application)
+
+👨‍💼 Hello again! We've got an exciting project ahead of us. Our users want us to
+deliver features and bug fixes faster with fewer bugs and we've decided the
+duplication of UI logic between the server render and the client-side code is
+slowing us down
+
+To speed things up and make our users happier, we're going to convert our
+existing Multi-Page Application into a Single Page Application using React.
+
+🧝‍♂️ Hi, I'm Kellie. I've already done a number of things to get things set up for
+our React app. You can <PrevDiffLink>check the diff</PrevDiffLink> to see what
+I've done so far.
+
+👨‍💼Thanks Kellie!
+
+Ok, so your main remaining tasks are to:
+
+1. Create initial state with `count`, `loading`, and `error`
+2. Implement `counterReducer` for various action types
+3. Use `useReducer` and `useEffect` hooks
+4. Implement `fetchCount` and `updateCount` functions
+5. Handle `loading` and `error` states in the UI
+
+Good luck, and let's create something amazing! 🚀
