--- a/exercises/02.early-react/FINISHED.mdx
+++ b/exercises/02.early-react/FINISHED.mdx
@@ -1,1 +1,5 @@
 # Early React
+
+👨‍💼 Great job! Now you have an idea of how we got to the early days of React and
+hopefully you have an idea of some of the challenges we faced that led to the
+frameworks we moved after.
