--- a/exercises/03.framework-react/01.problem.pespa/README.mdx
+++ b/exercises/03.framework-react/01.problem.pespa/README.mdx
@@ -1,1 +1,15 @@
 # PESPA
+
+👨‍💼 Let's turn our application into a **Progressively Enhanced Single Page
+Application** by using a framework.
+
+🧝‍♂️ I've already built out the framework for you. Your job is to simply implement
+the `loader`, `action`, and the UI for our counter component. If you want to see
+what I changed, check <PrevDiffLink>the diff</PrevDiffLink>.
+
+👨‍💼 Thanks Kellie!
+
+So now, please handle the bits of the application that product developers need
+to worry about now that we have a framework and pay special attention to how
+much network related code you have to write. Especially imagine how this would
+scale to a large application with routing.
