--- a/exercises/03.framework-react/01.solution.pespa/README.mdx
+++ b/exercises/03.framework-react/01.solution.pespa/README.mdx
@@ -1,1 +1,10 @@
 # PESPA
+
+👨‍💼 Great work! Now evaluate how much network related code you had to write.
+
+Not much! Maybe even none right? The framework handles everything for you and
+all you need to do is say what you want shown during the pending states. Remix
+is a terrific framework for building out Progressive Enhanced Single Page
+Applications.
+
+But we're not finished yet...
