--- a/exercises/03.framework-react/README.mdx
+++ b/exercises/03.framework-react/README.mdx
@@ -1,1 +1,25 @@
 # Framework React
+
+As a result of the network management issues, libraries and frameworks were
+created to help manage network requests. React Query became the most popular
+library for this.
+
+In the early days of React Frameworks, the emphasis was on loading data
+(arguably the easier part of network management) and then Remix was created
+which is a full stack framework built on top of React Router and inspired by
+standard web platform APIs. It introduced not only great loading state
+management but also great routing and form management.
+
+The core concept of Framework React is that the framework takes care of the
+network requests and you the developer simply provide the code for the UI, data
+loading, and form actions.
+
+It's not perfect, but as you'll see in this exercise, there's much less code you
+have to write that relates to network management.
+
+<callout-success>
+	One of the benefits of this approach as well is it allows us to bring back
+	progressive enhancement while still maintaining the qualities our users (and
+	developers) have come to appreciate about SPAs. Which is why this architecture
+	is referred to as a **"Progressively Enhanced Single Page Application"**.
+</callout-success>
