--- a/exercises/04.modern-react/01.solution.rsc/README.mdx
+++ b/exercises/04.modern-react/01.solution.rsc/README.mdx
@@ -1,1 +1,5 @@
 # RSC
+
+👨‍💼 Great job! Now we have everything our users were asking for! The ability to
+count up and down as well as a nice client-side user experience and our ability
+to ship faster with fewer bugs.
