--- a/exercises/04.modern-react/FINISHED.mdx
+++ b/exercises/04.modern-react/FINISHED.mdx
@@ -1,1 +1,12 @@
 # Modern React
+
+👨‍💼 Awesome work!
+
+🦉 It's important to note that there are some bumps in the road when upgrading
+your knowledge and familiarity with React Server Components and Actions. It's a
+new way to build React applications and the boundaries between server and client
+are different than what you might be used to.
+
+The network is really something we can never get away from in reality, but with
+a good understanding of how to compose server components, client components, and
+server actions, you can build really powerful applications.
