--- a/exercises/README.mdx
+++ b/exercises/README.mdx
@@ -31,3 +31,12 @@ By the end of this workshop, you'll have a comprehensive understanding of:
 
 Let's embark on this journey through time and see how React has helped us
 make network problems vanish! 🪄🕰️
+
+<callout-warning>
+	Note in this workshop we're not using any libraries or frameworks other than
+	packages from React and some custom code. For example, when we do the
+	frameworks bit, we have a very simple example of a framework that resemble's
+	Remix's `loader` and `action` concept. And when we do the React Server
+	Components bit, we have a very simple version based on the "React Flight ESM"
+	demo from the React repository.
+</callout-warning>
