--- a/exercises/02.early-react/01.problem.spa/README.mdx
+++ b/exercises/02.early-react/01.problem.spa/README.mdx
@@ -1,4 +1,4 @@
-# SPA (Single Page Application)
+# SPA
 
 👨‍💼 Hello again! We've got an exciting project ahead of us. Our users want us to
 deliver features and bug fixes faster with fewer bugs and we've decided the
