--- a/exercises/01.early-web/README.mdx
+++ b/exercises/01.early-web/README.mdx
@@ -62,7 +62,7 @@ app.get('/', (c) => {
 		<!doctype html>
 		<html lang="en">
 			<head>
-				<meta charset="UTF-8" />
+				<meta charset="UTF-8">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 				<title>Early Web Example</title>
 			</head>
@@ -88,7 +88,7 @@ app.get('/message', (c) => {
 		<!doctype html>
 		<html lang="en">
 			<head>
-				<meta charset="UTF-8" />
+				<meta charset="UTF-8">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 				<title>Early Web Example</title>
 			</head>
