--- a/exercises/02.early-react/01.problem.spa/README.mdx
+++ b/exercises/02.early-react/01.problem.spa/README.mdx
@@ -17,7 +17,7 @@ I've done so far.
 Ok, so your main remaining tasks are to:
 
 1. Create initial state with `count`, `loading`, and `error`
-2. Implement `counterReducer` for various action types
+2. Implement `countReducer` for various action types
 3. Use `useReducer` and `useEffect` hooks
 4. Implement `fetchCount` and `updateCount` functions
 5. Handle `loading` and `error` states in the UI
