improve a couple more things

--- a/exercises/04.modern-react/01.problem.rsc/README.mdx
+++ b/exercises/04.modern-react/01.problem.rsc/README.mdx
@@ -6,6 +6,10 @@
 
 👨‍💼 Yes, thank you Kellie!
 
+<callout-warning>
+	🦉 Make sure to restart the server for this one!
+</callout-warning>
+
 Now you just need to implement the `Counter` component using RSCs and server
 actions!
 
